# App_son

App_son/: Makefile  README.md  pyproject.toml
App_son/brain_games/: engine.py
App_son/brain_games/games/: OneMath_sign.py  TwoMath_sign.py  alphabet.py
App_son/brain_games/scripts/: OneMath_script.py  TwoMath_script.py  alphabet_script.py
python_linux/hello/: README.md
